--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                             <li class="list-inline-item">
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://github.com/RachelDursteler/WebDevelopmentProject/blob/main/about.html">
+                                <a href="https://racheldursteler.github.io/IS201final/mainpage.html">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-github fa-stack-1x fa-inverse"></i>
