--- a/mainpage.html
+++ b/mainpage.html
@@ -35,6 +35,7 @@
 <!--text-->
 
 <h3>Things to do:</h3>
+<div class="list">
 <ol>
     <li>Waterfalls</li>
         <ul>
@@ -61,6 +62,7 @@
             <li>Blue Diamond Cave In Vatnajokull Glacier</li>
         </ul>
 </ol>
+</div>
 <br>
 <!--embedded youtube video-->
 <iframe width="560" height="315" src="https://www.youtube.com/embed/W0PrnBQs_W4?si=Sa5FZ3DCCvOBquql" 
